[package]
name = "discrivener"
version = "0.2.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["lib"]

# note: if this fails to build on osx, you might need
# to install cmake
#   brew install cmake

# helper for async framework
[dependencies.async-trait]
version = "0.1.68"

[dependencies.bytes]
version = "1.4.0"

[dependencies.espeakng-sys]
git = "https://github.com/Better-Player/espeakng-sys/"
features = ["clang-runtime"]

[dependencies.futures]
version = "0.3.28"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.rubato]
version = "0.14.0"

[dependencies.serde]
version = "1.0.163"

[dependencies.serde_json]
version = "1.0.96"

[dependencies.serde_with]
version = "3.0.0"
default-features = false
features = ["json", "macros"]

# discord api
[dependencies.songbird]
version = "0.3.2"
default-features = false
features = ["driver", "rustls"]

# async framework
[dependencies.tokio]
version = "1.28.2"
features = ["full", "signal"]

[dependencies.tokio-util]
version = "0.7.8"

[dependencies.whisper-rs]
version = "0.8.0"

#features = ["cuda"]
# - coreml
# - cuda
# - opencl
# - simd

# # # # # # # # # # # # # # # # # # # # # # # #
# dependencies just for example code and tests
#

# command line argument parsing
[dev-dependencies.clap]
version = "4.3.2"
features = ["derive"]

[dev-dependencies.discrivener]
path = "./"
